feat(plugin-delta): Support reading variant type in Delta Lake tables
## Description

The Variant type is a new type for storing semi-structured data. This
commit add support for reading it from Delta Lake tables as JSON
strings. This allows for the use of JSON functions to extract values of
the Variant. This is an approach used by other engines like Trino.

Also updated the documentation to add the type mapping `VARIANT` -
`JSON`.

## Motivation and Context

Without this support, tables with Variant columns cannot be queried.
Solves: https://github.com/prestodb/presto/issues/26966

## Impact

Allows to query data that was previously unaccesible

## Test Plan
CI, Unit tests, Integration tests

```
== RELEASE NOTES ==
Delta Lake Connector Changes
* Add support for reading Variant columns as JSON columns
Presto Parquet
* Add support for reading Variant data as JSON
```